Deleted project tab

--- a/contact.css
+++ b/contact.css
@@ -12,6 +12,24 @@
     margin-bottom: 1em;
     font-size: 3em;
 }
+#links>h1 {
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0.5em auto;
+    letter-spacing: .15em;
+    animation:
+        typing 1.0s steps(40, end),
+        blink-caret .75s step-end infinite;
+}
+@keyframes typing {
+    from { width: 0 }
+    to { width: 25% }
+  }
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
 
 #links > ul{
     list-style: none;
